<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnSelectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onLoadImageClicked"
        android:text="@string/button_select_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/chkUseNNAPI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_useNNAPI"
        app:layout_constraintBottom_toBottomOf="@+id/btnSelectImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSelectImage"
        app:layout_constraintTop_toTopOf="@+id/btnSelectImage" />

    <ImageView
        android:id="@+id/imgSelectedImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/lblClassification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSelectImage" />

    <TextView
        android:id="@+id/lblClassification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/label_classification"
        app:layout_constraintBottom_toTopOf="@+id/lblConfidence"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblConfidence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/label_confidence"
        app:layout_constraintBottom_toTopOf="@+id/lblExecutionTime"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblExecutionTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/label_executiontime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtClassification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/lblClassification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblClassification"
        app:layout_constraintTop_toTopOf="@+id/lblClassification" />

    <TextView
        android:id="@+id/txtConfidence"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/lblConfidence"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblConfidence"
        app:layout_constraintTop_toTopOf="@+id/lblConfidence" />

    <TextView
        android:id="@+id/txtExecutionTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="0 ms"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblExecutionTime"
        app:layout_constraintTop_toTopOf="@+id/lblExecutionTime" />

</androidx.constraintlayout.widget.ConstraintLayout>